# polymarket-mcp

./: README.md  pyproject.toml
src/polymarket_mcp/: __init__.py  server.py
