[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket_mcp"
version = "0.1.0"
description = "MCP Server for PolyMarket API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.1.2",
]

[project.scripts]
polymarket-mcp = "polymarket_mcp:main"