[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket_mcp"
version = "0.1.0"
description = "MCP Server for PolyMarket API"
requires-python = ">=3.9"
dependencies = [
    "mcp-core",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "py-clob-client"
]

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_mcp"]